--- a/.htaccess
+++ b/.htaccess
@@ -4,7 +4,7 @@
 Options All -Indexes
 
 # CMCL:[HIDE HIDDEN AND PROJECT FILES]
-<FilesMatch "^((\.(.)+$)|nbproject)">
+<FilesMatch "^((\.(.)+$)|nbproject|todo\.txt)">
  Order Allow,Deny
  Deny from all
 </FilesMatch>
