--- a/composer.json
+++ b/composer.json
@@ -12,20 +12,14 @@
         }
     ],    
     "require": {
-        "firephp/firephp-core":      "dev-master",
-        "eloquent/asplode":          "dev-master",
-        "symfony/http-foundation":   ">=2.1.0",
-        "pimple/pimple":             ">=1.0.0",
-        "twig/twig":                 "1.*",
-        "kriswallsmith/assetic":     "v1.0.4",
-        "caseyamcl/goldenretriever": "dev-master"
-    },    
-    "repositories": [
-    {
-        "type": "vcs",
-        "url": "http://github.com/caseyamcl/goldenretriever"
-    }
-    ],
+        "silex/silex":            "1.0.x-dev",
+        "twig/twig":              ">=1.8,<2.0-dev",
+        "symfony/twig-bridge":    "2.1.*",
+        "eloquent/asplode":       "dev-master",
+        "symfony/yaml":           ">=2.1.0",
+        "guzzle/guzzle":          "v2.5.0",
+        "querypath/QueryPath":    "dev-master"   
+    }, 
     "autoload": {
         "psr-0": { "Caseyamcl": "src/" }
     }
