--- a/composer.json
+++ b/composer.json
@@ -13,11 +13,11 @@
     ],    
     "require": {
         "silex/silex":            "1.0.x-dev",
-        "twig/twig":              ">=1.8,<2.0-dev",
+        "twig/twig":              ">=1.11.1",
         "symfony/twig-bridge":    "2.1.*",
         "eloquent/asplode":       "dev-master",
         "symfony/yaml":           ">=2.1.0",
-        "guzzle/guzzle":          "v2.5.0",
+        "guzzle/guzzle":          ">=3.0.6,<4.0",
         "querypath/QueryPath":    "dev-master"   
     }, 
     "autoload": {
