Lots of work to the controllers, loader, and calendar

--- a/content/articles/backups-and-disaster-recovery-kit/meta.yml
+++ b/content/articles/backups-and-disaster-recovery-kit/meta.yml
@@ -5,4 +5,7 @@ date_updated:   2012 Jan 13
 image:         'bear-survival-kit.jpg'
 summary:       "I chastise you, the reader, for presumably not backing up your department's data, and share how to create a portable DR kit"
 category:      IT Management
-tags:          [Backups, Disaster Recovery, IT Management]
+tags:
+    - Backups
+    - Disaster Recovery
+    - IT Management
