Updating content and created a crawler to get aggregate information about content items

--- a/content/front/items.yml
+++ b/content/front/items.yml
@@ -1,4 +1,8 @@
-# Items for Front Page
+# Misc Items for Front Page
+
+# articles are done automatically
+# work is done automatically
+# presentations are done automatically
 
 # -------------------------------------------------------------------
 code:
@@ -43,29 +47,3 @@ presentations:
       title:  REST Application Architecture Principles
       tag:    2012 Feb 21
       desc:   Tallahassee PHP User Group presentation introducing RESTful architecture and desgin principles
-# -------------------------------------------------------------------
-articles:
-    - path:   /articles/backups-and-disaster-recovery-kit
-      title:  Backups and Disaster Recovery Kit
-      tag:    2012 Jan 13
-      desc:   Do you have a backup in your IT shop?  Do you have a contingency plan in case things go wrong?
-
-    - path:   /articles/playing-with-asynchronous-php-processing
-      title:  Playing with Asynchronous PHP Processing
-      tag:    2010 Sep 24
-      desc:   I present a concept for creating a worker-process for asynchronous job queue processing in PHP using CRON
-
-    - path:   /articles/setup-a-local-configuration-file-in-codeigniter
-      title:  Setup a Local Configuration File in CodeIgniter
-      tag:    2011 Apr 29
-      desc:   "How to manage configuration settings for a single CodeIgniter application, when that application may have many different environments"
-
-    - path:   /articles/ssh-tunnels-with-plink-and-heidisql
-      title:  SSH Tunnels with Plink and HeidiSQL
-      tag:    2012 Jan 2
-      desc:   "How to use Plink and HeidiSQL together to connect to MySQL servers via SSH tunnels, which can be tricky."
-
-    - path:   /articles/teaaching-php-course-curriculum
-      title:  Teaching PHP Course Curriculum
-      tag:    2012 Jan 13
-      desc:   "The problem, succinctly stated, is: How do you best organize 14 weeks of study to teach PHP to a group of motivated College students?"
