--- a/content/articles/backups-and-disaster-recovery-kit/meta.yml
+++ b/content/articles/backups-and-disaster-recovery-kit/meta.yml
@@ -1,7 +1,7 @@
 title:          Backups and Disaster Recovery Kit
 type:           article
-date_published: 2010 Jan 15
-date_updated:   2012 Jan 13
+date_published: 2010-01-15
+date_updated:   2012-01-13
 image:         'bear-survival-kit.jpg'
 summary:       "I chastise you, the reader, for presumably not backing up your department's data, and share how to create a portable DR kit"
 category:      IT Management
