--- a/content/articles/playing-with-asynchronous-php-processing/meta.yml
+++ b/content/articles/playing-with-asynchronous-php-processing/meta.yml
@@ -1,6 +1,6 @@
 title:          Playing with Asynchronous PHP Processing
 type:           article
-date_published: 2010 Sep 24
+date_published: 2012-09-24
 image:          flowchart.jpg
 summary:        "In this post, I present a concept for creating a worker-process for asynchronous job queue processing in PHP using CRON"
 category:       Web Development
