--- a/content/articles/setup-a-local-configuration-file-in-codeigniter/meta.yml
+++ b/content/articles/setup-a-local-configuration-file-in-codeigniter/meta.yml
@@ -1,7 +1,7 @@
 title:          Setup a local configuration file in Codeigniter
 type:           article
-date_published: 2011 Apr 29
-date_updated:   2012 Jan 8
+date_published: 2011-04-29
+date_updated:   2012-01-08
 image:          computer_dog.jpg
 summary:        "This post explains how to manage configuration settings for a single CodeIgniter application, when that application may have many different environments."
 category:       Web Development
