--- a/content/articles/ssh-tunnels-with-plink-and-heidisql/meta.yml
+++ b/content/articles/ssh-tunnels-with-plink-and-heidisql/meta.yml
@@ -1,7 +1,7 @@
 title:          SSH Tunnels with HiediSQL and Plink
 type:           article
-date_published: 2010 Nov 5
-date_updated:   2012 Jan 2
+date_published: 2010-11-05
+date_updated:   2012-01-02
 image:          tunnel.jpg
 summary:        "This post describes how to use Plink and HeidiSQL together to connect to MySQL servers via SSH tunnels, which can be tricky."
 category:       Web Development
