--- a/content/work/fsu-lis4368/meta.yml
+++ b/content/work/fsu-lis4368/meta.yml
@@ -1,7 +1,19 @@
 title:       Teaching - FSU LIS4368
 circa:       current
-description: I teach LIS4368 - Advanced Web Development as a senior-level course at FSU
+summary:     I teach LIS4368 - Advanced Web Development as a senior-level course at FSU
+mainscreenshot:
+    file:    ss_1.png
+    summary: Data Collection
+
 screenshots:
-    - ss_1.png: Front Page,
-    - ss_2.png: Data Collection,
-    - ss_3.png: Tailored Messaging Page
+    - file:    ss_2.png
+      summary: Data Collection
+
+    - file:    ss_3.png
+      summary: Data Collection
+
+    - file:    ss_4.png
+      summary: Data Collection
+
+    - file:    ss_5.png
+      summary: Data Collection
