--- a/content/work/ruatrisk/meta.yml
+++ b/content/work/ruatrisk/meta.yml
@@ -1,7 +1,19 @@
 title:       RU@Risk
 circa:       current
-description: A tailored messaging system and online data collection platform
+summary:     A tailored messaging system and online data collection platform
+mainscreenshot:
+    file:    ss_1.png
+    summary: Data Collection
+
 screenshots:
-    - ss_1.png: Front Page,
-    - ss_2.png: Data Collection,
-    - ss_3.png: Tailored Messaging Page
+    - file:    ss_2.png
+      summary: Data Collection
+
+    - file:    ss_3.png
+      summary: Data Collection
+
+    - file:    ss_4.png
+      summary: Data Collection
+
+    - file:    ss_5.png
+      summary: Data Collection
