--- a/content/work/ruatrisk/meta.yml
+++ b/content/work/ruatrisk/meta.yml
@@ -1,4 +1,5 @@
 title:       RU@Risk
+url:         https://strategichealthpros.com/ruatrisk
 circa:       current
 summary:     A tailored messaging system and online data collection platform
 mainscreenshot:
