--- a/content/work/fsu-lis4368/meta.yml
+++ b/content/work/fsu-lis4368/meta.yml
@@ -1,4 +1,5 @@
 title:       Teaching - FSU LIS4368
+url:         http://lis4368.cci.fsu.edu
 circa:       current
 summary:     I teach LIS4368 - Advanced Web Development as a senior-level course at FSU
 mainscreenshot:
