--- a/app/composer.json
+++ b/app/composer.json
@@ -10,16 +10,15 @@
             "homepage": "http://caseymclaughlin.com",
             "role":     "Developer"
         }
-    ],    
+    ],
     "require": {
         "silex/silex":            "1.0.x-dev",
-        "twig/twig":              ">=1.11.1",
+        "twig/twig":              ">=1.12",
         "symfony/twig-bridge":    "2.1.*",
         "eloquent/asplode":       "dev-master",
         "symfony/yaml":           ">=2.1.0",
-        "guzzle/guzzle":          ">=3.0.6,<4.0",
-        "querypath/QueryPath":    "dev-master"   
-    }, 
+        "guzzle/guzzle":          ">=3.0.6,<4.0"
+    },
     "autoload": {
         "psr-0": { "Caseyamcl": "src/" }
     }
