--- a/content/resume/resume.yml
+++ b/content/resume/resume.yml
@@ -7,6 +7,7 @@ email:       caseyamcl@gmail.com
 website:     http://caseymclaughlin.com
 phone:       (850) 284-7271
 
+#Education
 education:
     - institution:  Florida State University
       location:     'Tallahassee, Florida'
@@ -24,6 +25,7 @@ education:
         start:      2002-08-24
         end:        2004-05-04
 
+#Teaching
 teaching:
     - organization: Florida State University College of Communication and Information
       title:        'Adjunct Instructor - Web Development with PHP'
@@ -35,13 +37,26 @@ teaching:
         start:      2008-05-01
         end:        current
 
+#Experience
 experience:
+    - organization: Florida State University Research Computing Center
+      title:        Technology Specialist (25%)
+      description:
+       - 'Plan, deploy, configure, and manage OpenStack-based "SKY" cloud computing environment'
+       - 'Plan, develop, and manage RCC web presence and online support documentation'
+       - 'Develop and curate online documentation related to all RCC services'
+       - 'Work with other technical support staff to ensure users have access to resources'
+      duration:
+        start:      2011-01-01
+        end:        current       
     - organization: Florida State University Institute for Digital Information and Scientific Communication
       title:        IT Administrator / Non-Tenure faculty
       description:
         - 'Manage team of designers, developers, and sysadmins to support online repositories and web applications'
         - 'Participate in information management research for grant-based data collections'
-        - 'Implement semantic web technologies in large data repositories'
+        - 'Implement semantic web technologies and manage large data repositories'
+        - 'Develop web software to support research activity'
+        - 'Manage software maintenance, deployment, and code management activities'
       duration:
         start:      2011-01-01
         end:        current
@@ -49,11 +64,12 @@ experience:
     - organization: Florida State University College of Communication and Information
       title:        Director of Application Development
       description:
-        - 'Develop project management procedures and strategies, and manage multiple simultaneous web application development projects'
-        - 'Provide experiential learning and on-the-job training to undergraduate students through internships and mentoring'
-        - 'Provide assistance to faculty for utilizing IT resources in research grants'
-        - 'Manage and deploy Linux server systems for hosting hundreds of non-profit and academic websites, including several medium-to-high traffic sites and large databases'
-        - 'Ensure that faculty and staff have access to the very best tools for teaching, research, and service'
+        - 'Developed project management procedures and strategies, and manage multiple simultaneous web application development projects'
+        - 'Provided experiential learning and on-the-job training to undergraduate students through internships and mentoring'
+        - 'Provided assistance to faculty for utilizing IT resources in research grants'
+        - 'Managed and deploy Linux server systems for hosting hundreds of non-profit and academic websites, including several medium-to-high traffic sites and large databases'
+        - 'Ensured that faculty and staff have access to the very best tools for teaching, research, and service'
+        - 'Served as lead design point for new sever facility in the William Johnston Building (Rm 2010)'
       duration:
         start:      2009-07-01
         end:        2011-08-01
@@ -67,7 +83,7 @@ experience:
         - 'Completed overhaul of IT server systems, including implementation of virtual technologies and relocation to managed datacenter'
         - 'Developed standard operating procedures for server management'
         - 'Coordinated with other departments at FSU to reduce overhead by moving many functions onto centrally managed University-provided services, such as email, calendaring, listservs, firewall, etc.'
-        - 'Developed polices for, and managed $200,000 annual IT budget'
+        - 'Developed polices for and managed $200,000 annual IT budget'
       duration:
         start:      2005-06-01
         end:        2009-06-30
@@ -93,6 +109,7 @@ experience:
         start:      2004-09-01
         end:        2005-06-01
 
+#Research
 research:
     - type:        Presentation
       title:       'PDFJailbreak - a communal architecture for making biomedical PDFs semantic'
@@ -229,7 +246,27 @@ research:
         - 'McLaughlin, C.'
         - 'Webster, A.'
 
+#Projects
 projects:
+    - title:     Research Computing Center website
+      link:      http://rcc.fsu.edu
+      role:      Developer / Lead Content Administrator
+      duration:  2013-01-01
+      end:       current
+      description:
+       - 'Redevelop Research Computing Website to replace old http://hpc.fsu.edu webiste'
+       - 'Port website from Joomla v2 to Drupal v7'
+       - 'Design and develop interactive account management tools on site to interoperate with existing systems'
+
+    - title:     XtractPDF
+      link:      http://github.com/idiginfo/xtractpdf/
+      role:      Lead Developer
+      duration:  2013-05-31
+      end:       current
+      description:
+       - 'Develop a PHP/Mongo/KnockoutJS/Bootstrap online PDF extraction tool for general use'
+       - 'Support the tool in the community'
+
     - title:     Biotea
       link:      http://biotea.idiginfo.org
       role:      Systems and Database Support
@@ -242,7 +279,7 @@ projects:
        - 'Manage graph database, web endpoints, and web service documentation'
 
     - title:     FSU SKY Compute Cloud
-      link:      http://sc.fsu.edu
+      link:      http://rcc.fsu.edu/sky
       role:      Project Lead
       duration:
         start:   2011-08-01
@@ -251,6 +288,16 @@ projects:
         - 'Oversee implementation and maintenance of an Openstack compute system for scientific research at FSU'
         - 'Work with principal investigators and researchers at FSU to coordinate computing needs within this system'
         - 'Establish baseline service level expectations and ensure the system and staff provide those services'
+
+    - title:     iDigInfo Website
+      link:      http://idiginfo.org
+      role:      Project Manager
+      duration:
+        start:   2011-01-01
+        end:     current
+      description:
+       - 'Oversee design and development of iDigInfo website'
+       - 'Implement information architecture in Drupal to support iDigInfo site needs'
 
     - title:     Military Suicide Research Consortium
       link:      http://msrc.fsu.edu
@@ -264,7 +311,7 @@ projects:
         - 'Develop innovative interfaces for users to interact with a large academic journal collection'
 
     - title:     RU@Risk Online Intervention and Data Collection Tool
-      link:      http://strategichealthpros.com/ruatrisk
+      link:      https://strategichealthpros.com/ruatrisk
       role:      Lead Developer
       duration:
         start:   2009-05-01
@@ -286,6 +333,16 @@ projects:
         - 'Developed a custom CMS for an information repository'
         - 'Subsequently developed a custom API for the CMS, and migrated content into Drupal 7'
         - 'Manage maintenance and development of custom database query tools'
+
+    - title:     LIS4368 Website
+      link:      http://lis4368.cci.fsu.edu
+      role:      Developer
+      duration:
+        start:   2008-08-24
+        end:     current
+      description:
+        - 'Because the existing Learning CMS did not meet our needs, I developed a custom course website for LIS4368'
+        - 'The site is implemented in the Wordpress CMS, but will soon be ported over to the PHP Silex Framework (Fall, 2013)'
 
     - title:     iSpace Web Hosting System
       link:      http://ispace.ci.fsu.edu
@@ -334,16 +391,41 @@ projects:
         - 'Plan, develop, evaluate, deploy, and maintain a web-based survey and tailored content delivery system'
         - 'Coordinate and manage team of application developers'
 
+#Activities
 activities:
     - type:  Organization
       date:  current
       role:  Founder / Organizer
       title: Tallahassee PHP User Group
+      link:  http://meetup.com/tallyphp
+
+    - type:  Conference
+      date:  2013-07
+      role:  Participant
+      title: O’Reilly National Open Source Convention
+      link:  http://oscon.com
+
+    - type:  Conference
+      date:  2013-05
+      role:  Hackathon Organizer
+      title: Extended Semantic Web Conference and Jailbreaking the PDF Hackathon
+      link:  http://scholrev.org/hackathon/
+
+    - type:  Conference
+      date:  2013-03-01
+      role:  Participant
+      title: DrupalCamp Florida 2013
+
+    - type:  Conference
+      date:  2012-03-01
+      role:  Participant
+      title: DrupalCamp Florida 2012
+
 
     - type:  Conference
       date:  2011-10-01
       role:  Participant
-      title: DrupalCamp Atlanta
+      title: DrupalCamp Atlanta 2011
 
     - type:  Conference
       date:  2010-10-31
@@ -354,11 +436,6 @@ activities:
       date:  2010-05
       role:  Participant
       title: PHPTek 2010
-
-    - type:  Conference
-      date:  2010-07
-      role:  Participant
-      title: O’Reilly National Open Source Convention
 
     - type:  Organization
       date:  2008-01
@@ -380,13 +457,13 @@ activities:
       role:  Participant
       title: Cornell Policy Writing Workshop
 
-    - type:  Guest Talk
+    - type:  Guest Lecture
       date:  2009-04-01
       role:  Presenter
       title: Introduction to Server Virtualization
       venue: Florida State University Association of Information Technology Professionals
 
-    - type:  Guest Talk
+    - type:  Guest Lecture
       date:  2008-09-01
       role:  Presenter
       title: IT Ethics
@@ -401,27 +478,32 @@ skills:
       - 'Strong written and verbal Communication'
   - section: IT Management
     skills:
+      - 'Communicating with users, both technical and non-technical'
+      - 'Coordinating systems management procedures'
+      - 'Speaking both publicly and internally within an organization'
       - 'Installation and maintenance of server systems'
-      - 'Management of Linux systems, mostly CentOS and Ubuntu Server'
+      - 'Configuration management and automation (via Puppet)'
+      - 'Management of Linux systems, mostly RHEL and Ubuntu Server'
       - 'Systems architecture planning, mostly Open Source'
+      - 'Openstack Cloud Platform Planning and Implementation'
+      - 'Server Virtualization: vmWare, KVM/QEMU, Xen'
       - 'LAMP Stack, Lighttpd, and NGINX management'
-      - 'Server Virtualization: vmWare, KVM, Xen'
+      - 'LDAP integration with Linux (PAM), PHP, Wordpress, and Drupal'
       - 'Network management (SMB TCP/IP network planning, implementation, and maintenance)'
       - 'Windows Active Directory deployment and management'
       - 'MySQL deployment, configuration, and maintenance'
-      - 'Apache SOLR/Lucene (integration with Drupal)'
-      - 'LDAP integration with Linux (PAM), PHP, Wordpress, and Drupal'
+      - 'Apache SOLR/Lucene'
   - section: Web Development
     skills:
-      - 'Large web application project management'
       - 'Web application project management'
+      - 'Web site planning (IA and deployment)'
       - 'RDF/RDFa, Microformats, and Semantic Web Tool Integration'
-      - 'Drupal site planning, development, and maintenance'
-      - 'Drupal migration planning and implementation'
+      - 'Web deployment automation/continuous integration (via Jenkins)'
+      - 'Drupal site planning, migration, development, and maintenance'
       - 'Drupal module development'
       - 'Certified PHP developer'
-      - 'MVC: CodeIgniter and Zend Frameworks'
-      - 'HTML5, CSS, Jquery/JS development'
+      - 'MVC: Symfony, Silex, and Zend Frameworks'
+      - 'HTML5, CSS, Jquery/JS, KnockoutJS development'
       - 'Version control (Git, Mercurial, and Subversion)'
       - 'Eclipse, Netbeans, and VIM'
       - 'REST development, Web APIs, JSON, and XML'
